--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,10 +6,13 @@
     "admin-lte": "^2.4.2",
     "axios": "^0.17.1",
     "bootstrap": "^4.0.0-beta.2",
+    "input-moment": "^0.4.0",
+    "moment": "^2.20.1",
     "react": "^16.2.0",
     "react-bootstrap": "^0.31.5",
     "react-dom": "^16.1.1",
     "react-fontawesome": "^1.6.1",
+    "react-moment-input": "^0.2.13",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-table": "^6.7.4",
